working full algorithm dijkstra